<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NoWatch.NET</string>
    <string name="loading">Chargement ...</string>
    
    <string name="list_empty">Aucun élément</string>
    <string name="list_loading">Chargement en cours</string>
    <string name="list_current">En cours</string>
    <string name="list_pending">En attente</string>

    <string name="status_new">Nouveau</string>
    <string name="status_downloading">En téléchargement</string>
    <string name="status_incomplete">Incomplet</string>
    <string name="status_unread">Non-lu</string>
    <string name="status_read">Lu</string>
    
    <string name="menu_mark_all">Tout marquer comme lu</string>
    <string name="menu_options">Options</string>
    <string name="menu_download">Téléchargement</string>
    <string name="menu_bookmark">Favoris</string>
    
    <string name="dialog_update_all">Mise à jour en cours,\nMerci de patienter ...</string>
    <string name="dialog_cancel">Voulez-vous annuler le téléchargement ?</string>
    <string name="dialog_cancel_title">Annuler</string>
    <string name="dialog_pause_title">Pause</string>
    <string name="dialog_loading">Chargement en cours ...</string>
    
    <string name="toast_dl_canceled">Téléchargement annulé!</string>
    <string name="toast_sdcard">La carte SD n\'est pas accessible !</string>
    <string name="toast_sdcardfreespace">Espace insuffisant sur la carte SD !</string>
    <string name="toast_notsupported">Format de fichier non supporté !</string>
    <string name="toast_notconnected">Connection indisponible !</string>
    <string name="toast_nomobiletraffic">Option MOBILE/3G desactivée !</string>
    <string name="toast_service_unavailable">Service inaccessible</string>
    <string name="toast_service_disconnected">Service deconnecté</string>
    
    <string name="notif_dl_started">Téléchargement démarré ...</string>
    <string name="notif_dl_complete">Téléchargement terminé !</string>
    <string name="notif_update_new_title">Nouveaux podcasts</string>
    <string name="notif_update_new_desc">Podcasts disponibles</string>
    <string name="notif_update_new_info">%s nouveaux éléments</string>
    
    <string name="date_hour">Moins d\'une heure</string>
    <string name="date_hours">Il y a %s heures</string>
    <string name="date_days">Il y a %s jours</string>
    <string name="date_monthes">Il y a %s mois</string>
    
    <string name="btn_yes">Oui</string>
    <string name="btn_no">Non</string>
    <string name="btn_play">Jouer</string>
    <string name="btn_stream">Jouer (streaming)</string>
    <string name="btn_manage">Gérer</string>
    <string name="btn_download">Télécharger</string>
    <string name="btn_back">Retour</string>
    <string name="btn_refresh">Rafraichir</string>
    <string name="btn_search">Rechercher</string>
    <string name="btn_filter_podcast">Podcast</string>
    <string name="btn_pause">Pause</string>
    
<!--    <string name=""></string>-->
    
</resources>
