<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/menu_top"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:layout_marginLeft="3dip"
        android:layout_marginRight="3dip"
        android:layout_marginBottom="3dip">
        <Button
            android:id="@+id/btn_back"
            android:drawableLeft="@drawable/btn_back"
            android:text="@string/btn_back"
            android:visibility="gone"
            style="@style/Button_menu" />
        <Button
            android:id="@+id/btn_refresh"
            android:drawableLeft="@drawable/btn_refresh"
            android:text="@string/btn_refresh"
            android:visibility="gone"
            style="@style/Button_menu" />
        <Button
            android:id="@+id/btn_manage"
            android:drawableLeft="@drawable/btn_manage"
            android:text="@string/btn_manage"
            android:visibility="gone"
            style="@style/Button_menu" />            
        <Button
            android:id="@+id/btn_search"
            android:drawableLeft="@drawable/btn_search"
            android:text="@string/btn_search"
            android:visibility="gone"
            style="@style/Button_menu" />
        <Button
            android:id="@+id/btn_filter_podcast"
            android:drawableLeft="@drawable/btn_search"
            android:text="@string/btn_filter_podcast"
            android:visibility="gone"
            style="@style/Button_menu" />
        <Button
            android:id="@+id/btn_download"
            android:drawableLeft="@drawable/btn_download"
            android:text="@string/btn_download"
            android:visibility="gone"
            style="@style/Button_menu" />
        <Button
            android:id="@+id/btn_play"
            android:drawableLeft="@drawable/btn_play"
            android:text="@string/btn_stream"
            android:visibility="gone"
            style="@style/Button_menu" />
    </LinearLayout>
</LinearLayout>
