<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <include layout="@layout/header" />
    <TextView
        android:id="@+id/menu_top"
        android:background="@color/grey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dip"
        android:layout_marginRight="3dip"
        android:padding="1dip"
        android:textColor="#000"
        android:text="@string/list_current" />
    <ListView
        android:id="@+id/list_current"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:cacheColorHint="#00000000" />
    <TextView
        android:id="@+id/list_current_empty"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal"
        android:text="@string/list_empty" />
    <TextView
        android:id="@+id/menu_top"
        android:background="@color/grey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dip"
        android:layout_marginLeft="3dip"
        android:layout_marginRight="3dip"
        android:padding="1dip"
        android:textColor="#000"
        android:text="@string/list_pending" />
    <ListView
        android:id="@+id/list_pending"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:cacheColorHint="#00000000" />
    <TextView
        android:id="@+id/list_pending_empty"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal"
        android:text="@string/list_empty" />
</LinearLayout>
